# UTN-FRBA-machine-learning

./: Federico Gonzalez - Entrega final.ipynb  Pipfile  README.md  base.ipynb  entraga.py  entrega.html  entrega.ipynb  process.ipynb  process.py  pyproject.toml
