[tool.poetry]
name = "utn-frba-machine-learning"
version = "0.1.0"
description = ""
authors = ["FedeG <federicogonzalez761@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "utn_frba_machine_learning"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
ipdb = "^0.13.13"
ipython = "^8.16.1"
tabulate = "^0.9.0"
ipykernel = "^6.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
